# big_homework

./: CMakeLists.txt  README.md  big_homework.cpp
